--- a/css/style.css
+++ b/css/style.css
@@ -271,13 +271,15 @@ header {
 
 .my_skills {
     background-color: var(--clr-dark);
-    background-image: url(../images/typing.jpeg);
     background-size: cover;
     background-blend-mode: multiply;
     color: var(--clr-light);
     text-align: center;
 }
 
+h3 {
+    color: #ff9900;
+  }
 .section__title--skills {
     color: var(--clr-accent);
     position: relative;
